@@ -4,6 +4,8 @@
 =======================================================
 
 
+12 Sep 2006      use_nn variable added to bands.f90 ; few changes also in dos.f90. (AF) 
+
 06 Sep 2006      bug fixed in modpoint.f90 ; iutility/Makefile coherently updated. 
                  other bugs fixed in calls to the warning routine. 
                  IO routines for NQ ETSF NetCDF fmt (courtesy of V. Olevano, M. Verstraete) 
